--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "bootstrap": "^5.3.1",
     "convex": "1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.0",
