--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "convex-tour-chat",
   "version": "0.0.0",
   "scripts": {
-    "dev": "npm-run-all dev:init --parallel dev:server dev:client",
+    "dev": "npm-run-all  --parallel dev:server dev:client",
     "build": "tsc && vite build",
     "dev:server": "convex dev",
-    "dev:client": "vite --open",
-    "dev:init": "convex dev --run init --until-success"
+    "dev:client": "vite --open"
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
